# gimbaless-pipeline

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp  notes.org  pipeline_generator.cpp
src/: SimpleVideoStabilizer.cpp  SimpleVideoStabilizer.h  blur_exp.cpp  kaya_interface.cpp  kaya_interface.h  main.cpp  mem_helper.h  mem_helper.tpp  nuc.cpp  nuc.h  pipeline_generator.cpp  zerocopy.h
test/: example_kaya.cpp  kaya.cpp  kaya_test.cpp  pipline_timing.cpp  read_nuc.cpp
test/data/: 1.tif  2.tif
